# SqueezeLLM

./: README.md  llama.py  pyproject.toml
models/llama-2-13b/: config.json
models/llama-2-7b/: config.json  generation_config.json
models/opt-1.3b/: README.md  config.json
models/opt-13b/: config.json
models/opt-2.7b/: config.json
models/opt-30b/: config.json
models/opt-6.7b/: config.json
models/vicuna-13b-v1.3/: README.md  config.json  generation_config.json  tokenizer_config.json
models/vicuna-7b-v1.3/: README.md  config.json
models/xgen-7b-8k-base/: README.md  tokenizer_config.json
models/xgen-7b-8k-inst/: README.md  config.json  generation_config.json  tokenization_xgen.py  tokenizer_config.json
quantization/: README.md  chunk_models.py  generate_outlier_config.py  nuq.py  pack.py
squeezellm/: datautils.py  model_parse.py  modelutils.py  outliers.py  quant.py  quant_cuda.cpp  quant_cuda_kernel.cu  setup_cuda.py
