[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "squeezellm"
version = "0.1.0"
description = "Ultra Low-Precision LLM Quantization."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "accelerate",
    "sentencepiece",
    "tokenizers>=0.12.1",
    "torch",
    "transformers==4.29.0",
    "datasets"
]

[tool.setuptools.packages.find]
